# tiny-cutlass

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  README.md.md
.claude/skills/cutlass-kernel/: SKILL.md
.claude/skills/ncu-report/: SKILL.md
.codex/cutlass-kernel/: SKILL.md
.codex/skills/cutlass-kernel/: SKILL.md
cmake/: CUDNN.cmake  TensorRT.cmake  TinyCutlass.cmake
csrc/conv-fused/: AGENTS.md  CMakeLists.txt  README.md  STATUS.md  conv1x1_relu_conv1x1_bilinear.cu  conv_fused.h  conv_fused_utils.h  test_conv1x1_relu_conv1x1_bilinear.py
csrc/conv-fused/binding/: pytorch_binding.cpp
csrc/conv-fused/binding/tensorrt/: conv1x1_relu_conv1x1_relu.cpp  conv1x1_relu_conv1x1_relu.h  conv_relu_pool.cpp  conv_relu_pool.h
csrc/conv-fused/device/: conv1x1_relu_conv1x1.cu  conv1x1_relu_conv1x1.h  conv1x1_relu_conv1x1_b2b.cu  conv1x1_relu_conv1x1_b2b.h  conv_relu_pool.cu  conv_relu_pool.h  implicit_gemm_convolution_fusion.h
csrc/conv-fused/docs/: 00-overview.md  01-run.md  02-device-kernel.md  03-kernel-policy.md  04-rf-threadblock.md  05-porting-plan.md  06-source-walk.md
csrc/conv-fused/fp8/conv1x1_relu_conv1x1_relu_fp8/: AGENTS.md  README.md
csrc/conv-fused/fp8/conv1x1_relu_conv1x1_relu_fp8/device/: conv1x1_relu_conv1x1_relu_fp8.cu  conv1x1_relu_conv1x1_relu_fp8.h
csrc/conv-fused/fp8/conv1x1_relu_conv1x1_relu_fp8/kernel/: conv1x1_relu_conv1x1_relu_fp8.h
csrc/conv-fused/fp8/conv1x1_relu_conv1x1_relu_fp8/ops/: conv1x1_relu_conv1x1_relu_fp8.cu  conv1x1_relu_conv1x1_relu_fp8.h
csrc/conv-fused/fp8/conv1x1_relu_conv1x1_relu_fp8/threads/: conv1x1_relu_conv1x1_relu_fp8_epilogue_ops.h
csrc/conv-fused/kernel/: conv1x1_relu_conv1x1.h  conv1x1_relu_conv1x1_b2b_kernel.h  conv_relu_pool.h
csrc/conv-fused/ops/: conv1x1_relu_conv1x1.cu  conv1x1_relu_conv1x1.h  conv_relu_pool.cu  conv_relu_pool.h
csrc/conv-fused/threadblock/: conv1x1_relu_conv1x1_threadblock_shapes.h
csrc/conv-fused/threads/: epilogue_ops.h
csrc/conv-fused/warp/: conv1x1_relu_conv1x1_warp_shapes.h
csrc/flash-attention/: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  flash_attention.h  gemm_kernel_utils.h  params.h
csrc/flash-attention/00-naive-attention/: CMakeLists.txt  kernel_forward.h  naive_attention.cu
csrc/flash-attention/01-online-softmax/: CMakeLists.txt  kernel_forward.h  online_softmax.cu  online_softmax_attention.cu  online_softmax_test.cu
csrc/flash-attention/02-tiled-online-attention/: CMakeLists.txt  kernel_forward.h  tiled_online_attention.cu
csrc/flash-attention/blogs/: 00-naive-attention.md  01-online-softmax.md  02-tiled-online-attention.md  QUANTIZATION.md  SDPA.md
csrc/flash-attention/papers/: README.md
csrc/natten/: AGENTS.md  CMakeLists.txt  PAPERS.md  README.md  ROADMAP.md
csrc/natten/include/natten/: fna_forward.h
csrc/swin/: AGENTS.md  CMakeLists.txt  PATCH_EMBED.md  README.md  STATUS.md  patch_embed.cu  swin.cu  swin.h  swin_cutlass.cu  swin_problem.h
csrc/swin/blogs/: 00_OVERVIEW.md  BASIC_LAYER_AND_MODEL.md  PATCH_MERGING.md  SWIN_BLOCK.md  WINDOW_ATTENTION.md
csrc/swin/device/: launch.h  patch_embed.h  swin.h  swin_attention.h  swin_block.h  window_attention.h  window_partition.h
csrc/swin/docs/: 00-overview.md  01-patch-embed.md  02-swin-attention.md  03-swin-block.md  04-patch-merging.md  05-basic-layer-and-model.md  06-workflow-and-profiling.md
csrc/swin/kernel/: default_patch_embed.h  default_swin.h  default_swin_attention.h  default_swin_block.h  swin.h  window_attention.h
csrc/swin/kernels/: swin_kernels.h
csrc/swin/threadblock/: attention_glue.h  layout.h  normalization.h  patch_embed.h  window_partition.h
csrc/swin/trt/: swin_plugin.cpp  swin_plugin.h
csrc/swin/warp/: layout.h  window_mapping.h
csrc/tests/conv-fused/: conv1x1_relu_conv1x1.cu  conv1x1_relu_conv1x1_relu.cu  conv1x1_relu_conv1x1_relu_trt.cpp  conv_pool.cu  conv_pool_test.cu  conv_relu_fp8_test.cu  conv_relu_pool.cu  conv_relu_pool_plugin.cpp  conv_relu_pool_trt.cpp
csrc/tests/flash-attention/: cudnn_reference.h  flash_attention_test.cpp
csrc/tests/natten/: natten_fna_test.cu
csrc/tests/swin/: block.cpp  cudnn_swin_reference.h  patch_embed.cu  reference.cpp  reference.h  window.cpp
profiling/: .gitignore  README.md
profiling/scripts/: run_ncu.bat  run_ncu.ps1  run_nsys.bat
scripts/kernels/: template.bat
scripts/kernels/attention/: 00-native-attention.bat  01-online-softmax-attention.bat
scripts/kernels/conv-fused/: bench.py  conv-fused.bat  export_conv_relu_pool_reference.py  export_fp8_reference.py  verify.py
scripts/kernels/natten/: natten.bat
scripts/kernels/swin/: bench.py  prepare_official.py  profile_ncu.py  run.bat  swin.bat  verify.py
scripts/profile/: README.md  analyze_report.py  extract_stalls.py  ncu_utils.py  plot_timeline.py  run_ncu.py
scripts/profile/reference/: analysis_dimensions.md  collection.md  diagnosis_playbook.md  sm89_metrics.md  workflow.md
